<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="portfolio_header">My Nanodegree Apps!</string>
    <string name="popular_movies_1">POPULAR MOVIES 1</string>
    <string name="popular_movies_2">POPULAR MOVIES 2</string>
    <string name="super_duo">SUPER DUO!</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="make_your_app_mat">MAKE YOUR APP MATERIAL</string>
    <string name="capstone">CAPSTONE: MY APP</string>
    <string name="future_launch_toast_msg">This button will launch my %s app!</string>
    <string name="action_settings">Settings</string>
</resources>
