<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffa5ceff">

    <TextView android:text="@string/portfolio_header" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/portfolio_header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_large_material"
        android:textColor="@android:color/black" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies_1"
        android:id="@+id/popular_movies_1"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/black"
        android:width="200dp"
        android:height="55dp"
        android:layout_below="@+id/portfolio_header"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="openApp"
        android:nestedScrollingEnabled="false"
        android:enabled="true"
        android:background="@android:color/holo_orange_dark" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies_2"
        android:id="@+id/popular_movies_2"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:width="200dp"
        android:height="55dp"
        android:layout_below="@+id/popular_movies_1"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_orange_dark"
        android:layout_alignParentRight="false"
        android:layout_marginTop="10dp"
        android:enabled="true"
        android:onClick="openApp"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo"
        android:id="@+id/super_duo"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:width="200dp"
        android:height="55dp"
        android:layout_below="@+id/popular_movies_2"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_orange_dark"
        android:layout_marginTop="10dp"
        android:enabled="true"
        android:onClick="openApp"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_it_bigger"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:width="200dp"
        android:height="55dp"
        android:layout_below="@+id/super_duo"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_orange_dark"
        android:layout_marginTop="10dp"
        android:enabled="true"
        android:onClick="openApp"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_mat"
        android:id="@+id/make_your_app_mat"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:width="200dp"
        android:height="55dp"
        android:layout_below="@+id/build_it_bigger"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_orange_dark"
        android:layout_marginTop="10dp"
        android:enabled="true"
        android:onClick="openApp"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:textColor="#ffffffff"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:width="200dp"
        android:height="55dp"
        android:layout_below="@+id/make_your_app_mat"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_red_dark"
        android:layout_marginTop="10dp"
        android:enabled="true"
        android:onClick="openApp"
        android:clickable="true" />

</RelativeLayout>
